# task2_lab4_pkg

./: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/task2_lab4_pkg/lib/task2_lab4_pkg/: EKF_node
install/task2_lab4_pkg/share/task2_lab4_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
rosbag2_2024_11_25-13_25_02/: metadata.yaml  rosbag2_2024_11_25-13_25_02_0.db3
rosbag_files/rosbag2_2024_11_25-16_08_31/: metadata.yaml  rosbag2_2024_11_25-16_08_31_0.db3
rosbag_files/rosbag2_2024_11_25-18_48_18/: metadata.yaml  rosbag2_2024_11_25-18_48_18_0.db3
rosbag_files/rosbag2_2024_11_25-19_18_42/: metadata.yaml
rosbag_files/rosbag2_2024_11_25-19_31_28/: metadata.yaml
rosbag_files/rosbag2_2024_11_26-13_28_38/: metadata.yaml
rosbag_files/rosbag2_2024_11_26-13_31_29/: metadata.yaml
rosbag_files/rosbag2_2024_11_26-13_42_43/: metadata.yaml
rosbag_files/rosbag2_2024_11_26-13_50_14/: metadata.yaml
rosbag_files/rosbag2_2024_11_26-14_05_49/: metadata.yaml
rosbag_files/rosbag2_2024_11_26-14_07_27/: metadata.yaml
rosbag_files/rosbag2_2024_11_26-14_09_52/: metadata.yaml
rosbag_files/rosbag_005_003_003/: metadata.yaml
task2_lab4_pkg/: ekf_node.py
task2_lab4_pkg/utils/: ekf.py  probabilistic_models.py  probabilistic_models_task2.py
